Custom Link Model

--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -86,7 +86,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\"\n",
-        "SDZ_Download_Model = \"\" #@param [\"\", \"V1.5\", \"V1.5.SPYBG_ToolKit5\", \"V1.5.NeverEndingDream12\", \"V1.5.Dreamlike_Diffusion_1\", \"V1.5.Deliberate_2\", \"V1.5.Reliberate_1\", \"V1.5.ReVAnimated\", \"V1.5.DreamShaper\", \"V1.5.Photon_1\", \"V1.5.CyriousMix\", \"V1.5.Protogenx58\", \"V1.5.RealisticVision4\", \"VXL1.0\"]\n",
+        "SDZ_Download_Model = \"Custom_Link\" #@param [\"V1.5\", \"VXL1.0\", \"Custom_Link\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -106,9 +106,7 @@
         "#share = \" --ckpt=\" + SDZ_Model_Init + \" --ckpt-dir=\" + SDZ_Models_Dir + \" \" + SDZ_Args\n",
         "share = SDZ_Args\n",
         "\n",
-        "\n",
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
-        "\n",
         "sdxl_patch = True\n",
         "patches_dir = \"/content/SDZ/patches/\"\n",
         "merge_in_vram = False\n",
@@ -117,6 +115,7 @@
         "dpmpp_v2 = False\n",
         "hypernetworks_dir = False\n",
         "stable_build = False\n",
+        "\n",
         "# Unpack Repo, Dependencies, Caches\n",
         "if not os.path.exists(\"/content/SDZ\"):\n",
         "  start_install = int(time.time())\n",
@@ -191,7 +190,7 @@
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
         "  os.makedirs(patches_dir, exist_ok=True)\n",
         "\n",
-        "   # RAM Patch Code by ddPn08: https://github.com/ddPn08/automatic1111-colab/commit/81431d6bd66f0ef96fe638c2743623522e1bc797\n",
+        "# RAM Patch Code by ddPn08: https://github.com/ddPn08/automatic1111-colab/commit/81431d6bd66f0ef96fe638c2743623522e1bc797\n",
         "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/DPMPP_2M_V2.patch -P {patches_dir}  -c\n",
         "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/idgaf_about_git_ext.patch -P {patches_dir}  -c\n",
         "  !wget https://gist.github.com/NoCrypt/6e7331eda3d670c2156852ae5e300a42/raw/e52dac97fcabcb054b5737e0c5188cbc600c6582/sd-lowram.patch -P {patches_dir}  -c\n",
@@ -242,49 +241,18 @@
         "  os.chdir(SDZ_webui_path)\n",
         "  %cd /content/SDZ/models/Stable-diffusion\n",
         "\n",
-        "  if SDZ_Download_Model == \"V1.5\":\n",
+        "  if SDZ_Download_Model == \"Custom_Link\":\n",
+        "    custom_linkz = input(\"Enter Custom Link: \")\n",
+        "    if custom_linkz.strip() != \"\":\n",
+        "        download_command = f\"apt-get install -qq -y aria2 && url=\\\"{custom_linkz}\\\" && base_name=$(basename $url) && ((echo $url | grep -q \\\"drive.google.com\\\") && gdown --fuzzy $url || ((echo $url | grep -q \\\"huggingface.co/\\\") && (hf_token=\\\"\\\" && aria2c --console-log-level=error --summary-interval=10 --header=\\\"Authorization: Bearer $hf_token\\\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 $url)\"\n",
+        "        os.system(download_command)\n",
+        "\n",
+        "  elif SDZ_Download_Model == \"V1.5\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.SPYBG_ToolKit5\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/17292\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15SPYBG_ToolKit5.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.NeverEndingDream12\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/64094\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15NeverEndingDream12.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Dreamlike_Diffusion_1\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/1356\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Dreamlike_Diffusion_1.ckpt $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Deliberate_2\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/15236\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Deliberate_2.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Reliberate_1\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/XpucT/Reliberate/resolve/main/Reliberate.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Reliberate_1.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Photon_1\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/90072\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Photon_1.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.ReVAnimated\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/46846\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15ReVAnimated.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.DreamShaper\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/43888\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15DreamShaper.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.CyriousMix\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/7951\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15CyriousMix.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.Protogenx58\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/darkstorm2150/Protogen_x5.8_Official_Release/resolve/main/ProtoGen_X5.8-pruned-fp16.safetensors\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o 15Protogenx58.safetensors $url)\n",
-        "\n",
-        "  elif SDZ_Download_Model == \"V1.5.RealisticVision4\":\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://civitai.com/api/download/models/114367?type=Model&format=SafeTensor&size=pruned&fp=fp16\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o realisticVisionv40VAE.safetensors $url)\n",
         "\n",
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/WNCawM\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
         "    #!apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
-        "\n",
-        "  else:\n",
-        "    SDZ_Download_Model == \"\"\n",
-        "    !apt-get install -qq -y aria2 && url=\"https://huggingface.co/uwg/modelz_base/resolve/main/Zv1-5-fp16.ckpt\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o v15.ckpt $url)\n",
         "\n",
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
@@ -477,9 +445,7 @@
         "\n",
         "time_since_start = timedelta(seconds=time.time()-start_colab)\n",
         "print(\"\\n\\n\u001b[1;96mYou've been running this colab for\",\"%02d:%02d:%02d\" % (time_since_start.seconds / 3600, (time_since_start.seconds / 60) % 60, time_since_start.seconds % 60))\n",
-        "print(\"\\n\\n\")\n",
-        "\n",
-        "\n"
+        "print(\"\\n\\n\")"
       ],
       "metadata": {
         "cellView": "form",
