--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -86,7 +86,7 @@
         "#@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▣</font>\n",
         "SDZ_install = \"/content\"\n",
         "SDZ_Version = \"V1.5\"\n",
-        "SDZ_Download_Model = \"Custom_Link\" #@param [\"V1.5\", \"VXL1.0\", \"Custom_Link\"]\n",
+        "SDZ_Download_Model = \"Custom_Link\" #@param [\"\", \"V1.5\", \"VXL1.0\", \"Custom_Link\"]\n",
         "SDZ = \"SDZ\"\n",
         "SDZ_webui_path = (SDZ_install+'/'+'SDZ')\n",
         "os.chdir(SDZ_install)\n",
@@ -253,6 +253,10 @@
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/WNCawM\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
         "    #!apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
+        "\n",
+        "  else:\n",
+        "    SDZ_Download_Model == \"\"\n",
+        "    os.chdir(SDZ_webui_path)\n",
         "\n",
         "# SDZ_Extensions\n",
         "  if SDZ_Extensions:\n",
