--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -277,6 +277,7 @@
         "      !wget --timestamping https://civitai.com/api/download/models/63006 -O LowRA.safetensors\n",
         "      !wget --timestamping https://civitai.com/api/download/models/117467 -O polyhedron_skinny_all.pt\n",
         "      !wget --timestamping https://huggingface.co/casque/detailed_eye-10/resolve/main/detailed_eye-10.safetensors\n",
+        "      !wget --timestamping https://civitai.com/api/download/models/117955 -O topo_v4.safetensors\n",
         "      #!wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/Lora/ClothingAdjuster2.safetensors\n",
         "      !wget --timestamping https://civitai.com/api/download/models/62833 -O add_detail.safetensors\n",
         "    %cd ../..\n",
