--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -462,10 +462,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###### 🚧 WIP COMFYUI - INVOKE - FOOOCUS🚧"
+        "---\n",
+        "###### **🚧 WIP COMFYUI - INVOKE - FOOOCUS🚧**\n",
+        "\n",
+        "*Work in Proggress*"
       ],
       "metadata": {
-        "id": "VnLdGIvs6Sec"
+        "id": "NTiuRCwTJV8u"
       }
     },
     {
@@ -884,6 +887,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
