--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -327,6 +327,7 @@
         "        #!gdown https://acortar.link/FItcni -O pixelization.zip && unzip -n pixelization.zip && rm pixelization.zip\n",
         "        #!gdown https://acortar.link/4HFBBC -O ebsynth-utility.zip && unzip -n ebsynth-utility.zip && rm ebsynth-utility.zip\n",
         "        #!gdown https://acortar.link/HOw9Dh -O bilingual-localization.zip && unzip -n bilingual-localization.zip && rm bilingual-localization.zip\n",
+        "        #!gdown https://acortar.link/v1rJgX -O model-converter.zip && unzip -n model-converter.zip && rm model-converter.zip\n",
         "        #!gdown https://acortar.link/l8aaJO -O supermerger.zip && unzip -n supermerger.zip && rm supermerger.zip\n",
         "        #!gdown https://acortar.link/D8Rn6L -O merge-block-weighted.zip && unzip -n merge-block-weighted.zip && rm merge-block-weighted.zip\n",
         "        #!gdown https://acortar.link/Y6JKa9 -O model-toolkit.zip && unzip -n model-toolkit.zip && rm model-toolkit.zip\n",
