--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -294,14 +294,15 @@
         "        !gdown https://acortar.link/6QJzqw -O ultimate_upscale.zip && unzip -n ultimate_upscale.zip && rm ultimate_upscale.zip\n",
         "        #!gdown https://acortar.link/Y9tabV -O civitai-browser.zip && unzip -n civitai-browser.zip && rm civitai-browser.zip\n",
         "        !gdown https://acortar.link/rPmvQq -O tagcomplete.zip && unzip -n tagcomplete.zip && rm tagcomplete.zip\n",
-        "        !gdown https://acortar.link/OokkEf -O images-browser.zip && unzip -n images-browser.zip && rm images-browser.zip\n",
+        "        !gdown https://acortar.link/om98qv -O infinite-image-browsing.zip && unzip -n infinite-image-browsing.zip && rm infinite-image-browsing.zip\n",
+        "        #!gdown https://acortar.link/OokkEf -O images-browser.zip && unzip -n images-browser.zip && rm images-browser.zip\n",
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
         "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
-        "        #!gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
+        "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
         "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
         "        !gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
         "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
@@ -339,7 +340,6 @@
         "        #!gdown https://acortar.link/GVpO61 -O rembg.zip && unzip -n rembg.zip && rm rembg.zip\n",
         "        #!gdown https://acortar.link/7tZxUG -O huggingface-up.zip && unzip -n huggingface-up.zip && rm huggingface-up.zip\n",
         "        #!gdown https://acortar.link/48NKwo -O OneButtonPrompt.zip && unzip -n OneButtonPrompt.zip && rm OneButtonPrompt.zip\n",
-        "        #!gdown https://acortar.link/om98qv -O infinite-image-browsing.zip && unzip -n infinite-image-browsing.zip && rm infinite-image-browsing.zip\n",
         "        #!gdown https://acortar.link/bB4OkD -O inpaint-anything.zip && unzip -n inpaint-anything.zip && rm inpaint-anything.zip\n",
         "        #!gdown https://acortar.link/gNnek7 -O TemporalKit.zip && unzip -n TemporalKit.zip && rm TemporalKit.zip\n",
         "        #!git clone https://github.com/sunnyark/civitai-shortcut\n",
