icon work in proggress

--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -463,10 +463,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "---\n",
-        "###### **🚧 WIP COMFYUI - INVOKE - FOOOCUS🚧**\n",
-        "\n",
-        "*Work in Proggress*"
+        "<left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "*Work in Proggress COMFYUI - INVOKE - FOOOCUS*"
       ],
       "metadata": {
         "id": "NTiuRCwTJV8u"
@@ -759,8 +757,17 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "<details>\n",
+        "  <summary><font color=gray>CODE CONNECT COLAB</summary>\n",
+        "\n",
+        "\n",
+        "\n",
+        "```diff\n",
         "Prefix             | Path\n",
         "-------------------|------------------\n",
         "model | models/checkpoints\n",
@@ -779,17 +786,15 @@
         "clip_vision | models/clip_vision\n",
         "clip | models/clip\n",
         "\n",
-        "<br/>\n",
-        "\n",
         "How to use?\n",
         "\n",
-        "Example: `vaes:https://huggingface.co/NoCrypt/resources/resolve/main/VAE/wd.vae.safetensors, model:https://huggingface.co/NoCrypt/expermental_models/resolve/main/vanilla.safetensors`"
+        "Example: `vaes:https://huggingface.co/NoCrypt/resources/resolve/main/VAE/wd.vae.safetensors, model:https://huggingface.co/NoCrypt/expermental_models/resolve/main/vanilla.safetensors`\n",
+        "```\n",
+        "</details>\n"
       ],
       "metadata": {
-        "id": "V6NmA_Dr9D5f"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "Kdp2qk5Xv1Ti"
+      }
     },
     {
       "cell_type": "code",
