--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -93,7 +93,7 @@
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Args = \"--share --api --enable-insecure-extension-access --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --no-half-vae --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
+        "SDZ_Args = \"--share --api --enable-insecure-extension-access --medvram-sdxl --medvram --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
         "SDZ_ControlNet_Model = \"\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
@@ -173,12 +173,12 @@
         "    with capture.capture_output() as cap:\n",
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
-        "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ.txt\n",
-        "      import os; [os.system(line.strip()) for line in open(SDZ_install+'/''SDZ.txt')]; os.remove(SDZ_install+'/''SDZ.txt')\n",
+        "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        !gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
-        "        !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ.txt\n",
-        "        import os; [os.system(line.strip()) for line in open(SDZ_install+'/''SDZ.txt')]; os.remove(SDZ_install+'/''SDZ.txt')\n",
+        "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        !gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
         "\n",
         "      %cd SDZ\n",
         "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
@@ -252,7 +252,7 @@
         "\n",
         "  elif SDZ_Download_Model == \"VXL1.0\":\n",
         "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/WNCawM\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XL1.0vae.safetensors $url)\n",
-        "    #!apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
+        "    !apt-get install -qq -y aria2 && url=\"https://acortar.link/mt4XSp\" && base_name=$(basename $url) && ((echo $url | grep -q \"drive.google.com\") && gdown --fuzzy $url || ((echo $url | grep -q \"huggingface.co/\") && (hf_token=\"\" && aria2c --console-log-level=error --summary-interval=10 --header=\"Authorization: Bearer $hf_token\" -c -x 16 -k 1M -s 16 $base_name $url)) || aria2c --console-log-level=error --summary-interval=10 -c -x 16 -k 1M -s 16 -o XLREF1.0vae.safetensors $url)\n",
         "\n",
         "  else:\n",
         "    SDZ_Download_Model == \"\"\n",
@@ -264,7 +264,8 @@
         "    %cd models/VAE\n",
         "    if not os.path.exists('vae-ft-mse-840000-ema-pruned.ckpt'):\n",
         "      !wget --timestamping https://huggingface.co/uwg/modelz_base/resolve/main/VAE/vae-ft-mse-840000-ema-pruned.ckpt\n",
-        "      !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sdxl_vae/resolve/main/sdxl_vae.safetensors -o sdxl_vae.vae.safetensors\n",
+        "      !aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/ckpt/sdxl_vae/resolve/main/sdxl_vae.safetensors -o sdxl_vae.safetensors\n",
+        "      #!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/madebyollin/sdxl-vae-fp16-fix/resolve/main/sdxl_vae.safetensors -o sdxl_vae.safetensors\n",
         "    %cd ..\n",
         "\n",
         "    if not os.path.exists('Lora'):\n",
@@ -299,7 +300,7 @@
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
-        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
+        "        !gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
@@ -352,7 +353,7 @@
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
-        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
+        "        !gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
@@ -464,10 +465,10 @@
       "cell_type": "markdown",
       "source": [
         "<left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "*Work in Proggress COMFYUI - INVOKE - FOOOCUS*"
+        "##### Work in Proggress COMFYUI - INVOKE - FOOOCUS\n"
       ],
       "metadata": {
-        "id": "NTiuRCwTJV8u"
+        "id": "xYI-Cq9zT_ye"
       }
     },
     {
@@ -893,7 +894,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
