--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -174,11 +174,15 @@
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
         "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        !gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/vWaCJm'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
         "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        !gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/vWaCJm'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "\n",
         "      %cd SDZ\n",
         "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
