--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -93,7 +93,7 @@
         "##@markdown <left><font face='Verdana Regular' color='#00f3f3' size='4'>▥</font>\n",
         "#SDZ_Model_Init = \"\" #@param {type:\"string\"}\n",
         "#SDZ_Models_Dir = \"\" #@param {type:\"string\"}\n",
-        "SDZ_Args = \"--share --api --enable-insecure-extension-access --medvram-sdxl --medvram --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
+        "SDZ_Args = \"--share --api --enable-insecure-extension-access --medvram-sdxl --xformers --no-hashing --theme=dark --cloudflared --disable-safe-unpickle --enable-insecure-extension-access --cors-allow-origins=https://www.painthua.com,https://zero01101.github.io\"\n",
         "SDZ_Extensions = True\n",
         "SDZ_ControlNet = True\n",
         "SDZ_ControlNet_Model = \"\" #@param [\"\", \"V1.5\", \"VXL1.0\"]\n",
@@ -234,6 +234,7 @@
         "\n",
         "  !apt --fix-broken install\n",
         "  !pip install fastapi==0.94.0 -qq\n",
+        "  #!pip install open-clip-torch==2.20.0\n",
         "  #!pip install openmim\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
@@ -304,7 +305,7 @@
         "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
         "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
         "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
-        "        !gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
+        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
         "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
         "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
         "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
@@ -357,7 +358,7 @@
         "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
         "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
         "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
-        "        !gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
+        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
         "\n",
         "    %cd ..\n",
         "\n",
