--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -469,8 +469,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
-        "##### Work in Proggress COMFYUI - INVOKE - FOOOCUS\n"
+        "##### <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>"
       ],
       "metadata": {
         "id": "xYI-Cq9zT_ye"
@@ -551,7 +550,7 @@
         "  start_colab = int(time.time())-5\n",
         "\n",
         "# Interactive form variables\n",
-        "latest_ui = True #@param{type:\"boolean\"}\n",
+        "latest_ui = False #@param{type:\"boolean\"}\n",
         "latest_nodes = False #@param{type:\"boolean\"}\n",
         "verbose = False #@param{type:\"boolean\"}\n",
         "args=\"--dont-print-server --preview-method auto --enable-cors-header --use-pytorch-cross-attention\" #@param{type:\"string\"}\n",
