--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -469,6 +469,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "####<summary>Nombre de la sección</summary>\n",
+        "\n",
         "##### <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>"
       ],
       "metadata": {
@@ -892,12 +894,30 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown <details><summary>Mi Sección Colapsada</summary>\n",
+        "\n",
+        "# Contenido de la sección\n",
+        "print(\"Este es el contenido de la sección.\")\n",
+        "\n",
+        "# @markdown </details>\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "0fzRzKZGqKDZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
