--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -469,8 +469,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<details>\n",
-        "\n"
+        "# <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center>\n",
+        "<script>\n",
+        "document.addEventListener('DOMContentLoaded', function() {\n",
+        "  var details = document.querySelectorAll('details');\n",
+        "  details.forEach(function(detail) {\n",
+        "    detail.removeAttribute('open');\n",
+        "  });\n",
+        "});\n",
+        "</script>\n"
       ],
       "metadata": {
         "id": "xYI-Cq9zT_ye"
@@ -757,24 +764,10 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "SgdZwo8u-TJ9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 141
-        },
-        "outputId": "d7c89c35-74b3-45a1-8116-8585f7437a99"
+        "id": "SgdZwo8u-TJ9"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-9661c07c4883>\"\u001b[0;36m, line \u001b[0;32m56\u001b[0m\n\u001b[0;31m    -----------------------\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -907,12 +900,36 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<details>\n",
+        "<summary>Título de la sección</summary>\n",
+        "\n",
+        "Contenido de la sección\n",
+        "\n",
+        "</details>\n",
+        "\n",
+        "<script>\n",
+        "document.addEventListener('DOMContentLoaded', function() {\n",
+        "  var details = document.querySelectorAll('details');\n",
+        "  details.forEach(function(detail) {\n",
+        "    detail.removeAttribute('open');\n",
+        "  });\n",
+        "});\n",
+        "</script>\n"
+      ],
+      "metadata": {
+        "id": "p5FsD7a4usLA"
+      }
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
