--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -484,6 +484,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# New Section"
+      ],
+      "metadata": {
+        "id": "fZtKHtvqv1Ul"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@markdown <left><img src='https://github.com/wilzamguerrero/SDZ/blob/main/SDZ_custom/icon/install.png?raw=true' height=\"50\" alt=\"netdata\"/></center> COMFYUI WIP\n",
@@ -900,29 +909,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<details>\n",
-        "<summary>Título de la sección</summary>\n",
-        "\n",
-        "Contenido de la sección\n",
-        "\n",
-        "</details>\n",
-        "\n",
-        "<script>\n",
-        "document.addEventListener('DOMContentLoaded', function() {\n",
-        "  var details = document.querySelectorAll('details');\n",
-        "  details.forEach(function(detail) {\n",
-        "    detail.removeAttribute('open');\n",
-        "  });\n",
-        "});\n",
-        "</script>\n"
-      ],
-      "metadata": {
-        "id": "p5FsD7a4usLA"
-      }
     }
   ],
   "metadata": {
