--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -234,7 +234,7 @@
         "\n",
         "  !apt --fix-broken install\n",
         "  !pip install fastapi==0.94.0 -qq\n",
-        "  #!pip install open-clip-torch==2.20.0\n",
+        "  #!pip install open-clip-torch==2.20.0 -qq --no-deps\n",
         "  #!pip install openmim\n",
         "  #!pip install svglib\n",
         "  #!sudo apt-get install libcairo2-dev\n",
