--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -107,7 +107,7 @@
         "share = SDZ_Args\n",
         "\n",
         "#/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\n",
-        "sdxl_patch = True\n",
+        "sdxl_patch = False\n",
         "patches_dir = \"/content/SDZ/patches/\"\n",
         "merge_in_vram = False\n",
         "load_in_vram = False\n",
@@ -173,15 +173,15 @@
         "    with capture.capture_output() as cap:\n",
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
-        "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #!gdown https://acortar.link/hYsdKj -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
         "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/vWaCJm'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/hYsdKj'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
-        "        #!gdown https://acortar.link/vWaCJm -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
+        "        #!gdown https://acortar.link/hYsdKj -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
         "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/vWaCJm'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/hYsdKj'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
         "\n",
         "      %cd SDZ\n",
