--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -173,16 +173,12 @@
         "    with capture.capture_output() as cap:\n",
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
-        "        #!gdown https://acortar.link/hYsdKj -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/hYsdKj'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
-        "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ3\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
-        "        #!gdown https://acortar.link/hYsdKj -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #!gdown https://acortar.link/7s6bCl -O SDZ.zip && (mkdir -p SDZ; unzip -n SDZ.zip -d SDZ && mv SDZ/*/* SDZ/ && rm SDZ.zip)\n",
-        "        #import requests, zipfile, os, shutil; url = 'https://acortar.link/hYsdKj'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
-        "        import requests, zipfile, os, shutil; url = 'https://acortar.link/7s6bCl'; zf = '/content/archivo.zip'; ef = '/content/extraccion'; new_name = '/content/SDZ'; requests.get(url, stream=True).raw.decode_content = True; open(zf, 'wb').write(requests.get(url, stream=True).content); zipfile.ZipFile(zf, 'r').extractall(ef); os.rename(os.path.join(ef, os.listdir(ef)[0]), new_name); os.remove(zf); shutil.rmtree(ef); print(\"SDZ Downloaded\")\n",
+        "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ3\")\n",
         "\n",
         "      %cd SDZ\n",
         "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
@@ -981,7 +977,6 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
