--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -174,11 +174,11 @@
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
         "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
-        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ3\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
         "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
-        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ3\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "\n",
         "      %cd SDZ\n",
         "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
