--- a/SDZ.ipynb
+++ b/SDZ.ipynb
@@ -173,12 +173,12 @@
         "    with capture.capture_output() as cap:\n",
         "      if os.path.exists(SDZ):\n",
         "        shutil.rmtree(SDZ)\n",
-        "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
-        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "\n",
         "      if not os.path.exists(SDZ):\n",
-        "        import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
-        "        #import os; link = \"https://github.com/AUTOMATIC1111/s t a b l e - d i f f u s i o n - w e b u i.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --depth 1 {link.replace(' ', '')} SDZ\")\n",
+        "        #import os; link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui.git\"; os.system(f\"git clone --branch release_candidate --depth 1 {link.replace(' ', '')} SDZ\")\n",
         "\n",
         "      %cd SDZ\n",
         "      !wget --timestamping https://raw.githubusercontent.com/wilzamguerrero/SDZ/main/SDZ_custom/SDZ_Files.txt\n",
@@ -291,71 +291,69 @@
         "    %cd ..\n",
         "\n",
         "    %cd extensions\n",
-        "    if not os.path.exists('batchlinks-webui-main'):\n",
-        "        !gdown https://acortar.link/5GXaEX -O batchlinks.zip && unzip -n batchlinks.zip && rm batchlinks.zip\n",
-        "        !gdown https://acortar.link/6QJzqw -O ultimate_upscale.zip && unzip -n ultimate_upscale.zip && rm ultimate_upscale.zip\n",
-        "        #!gdown https://acortar.link/Y9tabV -O civitai-browser.zip && unzip -n civitai-browser.zip && rm civitai-browser.zip\n",
-        "        !gdown https://acortar.link/rPmvQq -O tagcomplete.zip && unzip -n tagcomplete.zip && rm tagcomplete.zip\n",
-        "        !gdown https://acortar.link/om98qv -O infinite-image-browsing.zip && unzip -n infinite-image-browsing.zip && rm infinite-image-browsing.zip\n",
-        "        #!gdown https://acortar.link/OokkEf -O images-browser.zip && unzip -n images-browser.zip && rm images-browser.zip\n",
-        "        !gdown https://acortar.link/wRkiSO -O tunnels.zip && unzip -n tunnels.zip && rm tunnels.zip\n",
-        "        !gdown https://acortar.link/v7WMPk -O photopea.zip && unzip -n photopea.zip && rm photopea.zip\n",
-        "        !gdown https://acortar.link/YIz9eb -O prompt-all-in-one.zip && unzip -n prompt-all-in-one.zip && rm prompt-all-in-one.zip\n",
-        "        #!gdown https://acortar.link/Js6Hu0 -O roopu.zip && unzip -n roopu.zip && rm roopu.zip\n",
-        "        #!gdown https://acortar.link/EdDKWr -O roop.zip && unzip -n roop.zip && rm roop.zip\n",
-        "        #!gdown https://acortar.link/5Y5h8y -O aspect-ratio.zip && unzip -n aspect-ratio.zip && rm aspect-ratio.zip\n",
-        "        !gdown https://acortar.link/Oif2XF -O canvas-zoom.zip && unzip -n canvas-zoom.zip && rm canvas-zoom.zip\n",
-        "        #!gdown https://acortar.link/6MYdhj -O deforum.zip && unzip -n deforum.zip && rm deforum.zip\n",
-        "        !gdown https://acortar.link/7aJCkg -O agent-scheduler.zip && unzip -n agent-scheduler.zip && rm agent-scheduler.zip\n",
-        "        #!gdown https://acortar.link/glUPMq -O canvas-editor.zip && unzip -n canvas-editor.zip && rm canvas-editor.zip\n",
-        "        #!gdown https://acortar.link/r5yoeb -O depthmap-script.zip && unzip -n depthmap-script.zip && rm depthmap-script.zip\n",
-        "        #!gdown https://acortar.link/ESjkXf -O depthmap2mask.zip && unzip -n depthmap2mask.zip && rm depthmap2mask.zip\n",
-        "        #!gdown https://acortar.link/FsLVUb -O normalmap-script.zip && unzip -n normalmap-script.zip && rm normalmap-script.zip\n",
-        "        #!gdown https://acortar.link/cGYWlc -O adetailer.zip && unzip -n adetailer.zip && rm adetailer.zip\n",
-        "        #!gdown https://acortar.link/gqzWbD -O SD-CN-Animation.zip && unzip -n SD-CN-Animation.zip && rm SD-CN-Animation.zip\n",
-        "        #!gdown https://acortar.link/p8qOph -O mov2mov.zip && unzip -n mov2mov.zip && rm mov2mov.zip\n",
-        "        #!gdown https://acortar.link/hwoL5v -O promptgen.zip && unzip -n promptgen.zip && rm promptgen.zip\n",
-        "        #!gdown https://acortar.link/LO4i8S -O Prompt_Generator.zip && unzip -n Prompt_Generator.zip && rm Prompt_Generator.zip\n",
-        "        #!gdown https://acortar.link/HuYSFU -O lobe-theme.zip && unzip -n lobe-theme.zip && rm lobe-theme.zip\n",
-        "        #!gdown https://acortar.link/O2w0yW -O infinite-zoom.zip && unzip -n infinite-zoom.zip && rm infinite-zoom.zip\n",
-        "        #!gdown https://acortar.link/eaojeA -O two-shot.zip && unzip -n two-shot.zip && rm two-shot.zip\n",
-        "        #!gdown https://acortar.link/eZFyiN -O regional-prompter.zip && unzip -n regional-prompter.zip && rm regional-prompter.zip\n",
-        "        #!gdown https://acortar.link/QjABYa -O composable-lora.zip && unzip -n composable-lora.zip && rm composable-lora.zip\n",
-        "        #!gdown https://acortar.link/dpbdks -O depth-hands.zip && unzip -n depth-hands.zip && rm depth-hands.zip\n",
-        "        #!gdown https://acortar.link/01sbGg -O pose-editor-3d.zip && unzip -n pose-editor-3d.zip && rm pose-editor-3d.zip\n",
-        "        #!gdown https://acortar.link/aNjD4Q -O pose-editor3d.zip && unzip -n pose-editor3d.zip && rm pose-editor3d.zip\n",
-        "        #!gdown https://acortar.link/9FJQtn -O posex.zip && unzip -n posex.zip && rm posex.zip\n",
-        "        #!gdown https://acortar.link/o2lUBc -O openpose-editor.zip && unzip -n openpose-editor.zip && rm openpose-editor.zip\n",
-        "        #!gdown https://acortar.link/i5gthO -O Civitai-Helper.zip && unzip -n Civitai-Helper.zip && rm Civitai-Helper.zip\n",
-        "        #!gdown https://acortar.link/FItcni -O pixelization.zip && unzip -n pixelization.zip && rm pixelization.zip\n",
-        "        #!gdown https://acortar.link/4HFBBC -O ebsynth-utility.zip && unzip -n ebsynth-utility.zip && rm ebsynth-utility.zip\n",
-        "        #!gdown https://acortar.link/HOw9Dh -O bilingual-localization.zip && unzip -n bilingual-localization.zip && rm bilingual-localization.zip\n",
-        "        #!gdown https://acortar.link/v1rJgX -O model-converter.zip && unzip -n model-converter.zip && rm model-converter.zip\n",
-        "        #!gdown https://acortar.link/l8aaJO -O supermerger.zip && unzip -n supermerger.zip && rm supermerger.zip\n",
-        "        #!gdown https://acortar.link/D8Rn6L -O merge-block-weighted.zip && unzip -n merge-block-weighted.zip && rm merge-block-weighted.zip\n",
-        "        #!gdown https://acortar.link/Y6JKa9 -O model-toolkit.zip && unzip -n model-toolkit.zip && rm model-toolkit.zip\n",
-        "        #!gdown https://acortar.link/9OfKVt -O video_loopback.zip && unzip -n video_loopback.zip && rm video_loopback.zip\n",
-        "        #!gdown https://acortar.link/JHmMzr -O dynamic-thresholding.zip && unzip -n dynamic-thresholding.zip && rm dynamic-thresholding.zip\n",
-        "        #!gdown https://acortar.link/SClVrc -O additional-networks.zip && unzip -n additional-networks.zip && rm additional-networks.zip\n",
-        "        #!gdown https://acortar.link/dNQEnV -O llul.zip && unzip -n llul.zip && rm llul.zip\n",
-        "        #!gdown https://acortar.link/fQlWfu -O cutoff.zip && unzip -n cutoff.zip && rm cutoff.zip\n",
-        "        #!gdown https://acortar.link/GVpO61 -O rembg.zip && unzip -n rembg.zip && rm rembg.zip\n",
-        "        #!gdown https://acortar.link/7tZxUG -O huggingface-up.zip && unzip -n huggingface-up.zip && rm huggingface-up.zip\n",
-        "        #!gdown https://acortar.link/48NKwo -O OneButtonPrompt.zip && unzip -n OneButtonPrompt.zip && rm OneButtonPrompt.zip\n",
-        "        #!gdown https://acortar.link/bB4OkD -O inpaint-anything.zip && unzip -n inpaint-anything.zip && rm inpaint-anything.zip\n",
-        "        #!gdown https://acortar.link/gNnek7 -O TemporalKit.zip && unzip -n TemporalKit.zip && rm TemporalKit.zip\n",
-        "        #!git clone https://github.com/sunnyark/civitai-shortcut\n",
-        "        #!gdown https://acortar.link/52XJvM -O dragGAN.zip && unzip -n dragGAN.zip && rm dragGAN.zip\n",
-        "        #!gdown https://acortar.link/TQvkPk -O loopback_scaler.zip && unzip -n loopback_scaler.zip && rm loopback_scaler.zip\n",
-        "        #!gdown https://acortar.link/c7W5YY -O 3D_editor.zip && unzip -n 3D_editor.zip && rm 3D_editor.zip\n",
-        "        #!gdown https://acortar.link/KayyQV -O 3D_loader.zip && unzip -n 3D_loader.zip && rm 3D_loader.zip\n",
-        "        #!gdown https://acortar.link/e5cxQ0 -O txt_img_3d.zip && unzip -n txt_img_3d.zip && rm txt_img_3d.zip\n",
-        "        #!gdown https://acortar.link/US0GK0 -O qrcode_gen.zip && unzip -n qrcode_gen.zip && rm qrcode_gen.zip\n",
-        "        #!gdown https://acortar.link/wyLuCY -O qrcode_tool.zip && unzip -n qrcode_tool.zip && rm qrcode_tool.zip\n",
-        "        !gdown https://acortar.link/OBKV9s -O zoomimage.zip && unzip -n zoomimage.zip && rm zoomimage.zip\n",
-        "        #!gdown https://acortar.link/IjtgWB -O animatediff.zip && unzip -n animatediff.zip && rm animatediff.zip\n",
-        "        #!gdown https://acortar.link/11b1Vu -O refiner.zip && unzip -n refiner.zip && rm refiner.zip\n",
-        "\n",
+        "        link = \"https://github.com/etherealxx/batchlinks-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Coyote-A/ultimate-upscale-for-automatic1111\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/camenduru/sd-civitai-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/DominikDoom/a1111-sd-web ui-tagcomplete\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/zanllp/sd-web ui-infinite-image-browsing\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/AlUlkesh/stable-diffusion-web ui-images-browser\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/camenduru/sd-web ui-tunnels\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/yankooliveira/sd-web ui-photopea-embed\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/Physton/sd-web ui-prompt-all-in-one\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/P2Enjoy/sd-web ui-roop-uncensored\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/s0md3v/sd-web ui-roop\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/alemelis/sd-web ui-ar\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/richrobber2/canvas-zoom\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/viyiviyi/stable-diffusion-web ui-zoomimage\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/deforum-art/sd-web ui-deforum\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        link = \"https://github.com/ArtVentureX/sd-web ui-agent-scheduler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/jtydhr88/sd-canvas-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/thygate/stable-diffusion-web ui-depthmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Extraltodeus/depthmap2mask\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/graemeniedermayer/stable-diffusion-web ui-normalmap-script\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Bing-su/adetailer\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/volotat/SD-CN-Animation\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Scholar01/sd-web ui-mov2mov\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-promptgen\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/imrayya/stable-diffusion-web ui-Prompt_Generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/lobehub/sd-web ui-lobe-theme\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/v8hid/infinite-zoom-automatic1111-web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/opparco/stable-diffusion-web ui-two-shot\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/hako-mikan/sd-web ui-regional-prompter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/opparco/stable-diffusion-web ui-composable-lora\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/jexom/sd-web ui-depth-lib\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/ZhUyU1997/open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/nonnonstop/sd-web ui-3d-open-pose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/hnmr293/posex\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/fkunn1326/openpose-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/butaixianran/Stable-Diffusion-Web ui-Civitai-Helper\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-pixelization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/s9roll7/ebsynth_utility\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/journey-ad/sd-web ui-bilingual-localization\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Akegarasu/sd-web ui-model-converter\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/hako-mikan/sd-web ui-supermerger\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/bbc-mc/sdweb-merge-block-weighted-gui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/arenasys/stable-diffusion-web ui-model-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/fishslot/video_loopback_for_web ui\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/mcmonkeyprojects/sd-dynamic-thresholding\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/kohya-ss/sd-web ui-additional-networks\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/hnmr293/sd-web ui-llul\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/hnmr293/sd-web ui-cutoff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/AUTOMATIC1111/stable-diffusion-web ui-rembg\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/camenduru/stable-diffusion-web ui-huggingface\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/AIrjen/OneButtonPrompt\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Uminosachi/sd-web ui-inpaint-anything\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/CiaraStrawberry/TemporalKit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/sunnyark/civitai-shortcut\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/aleSheng/sd-web ui-dragGAN-extension\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/Elldreth/loopback_scaler\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/jtydhr88/sd-web ui-3d-editor\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/jtydhr88/sd-3dmodel-loader\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/jtydhr88/sd-web ui-txt-img-to-3d-model\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/missionfloyd/web ui-qrcode-generator\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/antfu/sd-web ui-qrcode-toolkit\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/continue-revolution/sd-web ui-animatediff\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
+        "        #link = \"https://github.com/wcde/sd-web ui-refiner\"; os.system(f\"git clone {link.replace(' ', '')}\")\n",
         "    %cd ..\n",
         "\n",
         "# SDZ_ControlNet\n",
